// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Filter should render 1`] = `
<Action
  bsStyle="link"
  className=""
  hideLabel={true}
  icon="talend-search"
  id={undefined}
  label="Toggle filter"
  onClick={[Function]}
  tooltipPlacement={undefined}
/>
`;

exports[`Filter should render filter input with default placeholder 1`] = `
<form
  className="undefined"
  onSubmit={[Function]}
  role="search"
>
  <div
    className="form-group undefined"
  >
    <Icon
      className={undefined}
      name="talend-search"
    />
    <FilterInput
      autoFocus={true}
      debounceMinLength={undefined}
      debounceTimeout={undefined}
      dockable={true}
      id={undefined}
      onBlur={[Function]}
      onFilter={[Function]}
      onFocus={[Function]}
      onToggle={undefined}
      placeholder="Filter"
      value={undefined}
    />
    <Action
      bsStyle="link"
      className={undefined}
      hideLabel={true}
      icon="talend-cross"
      id={undefined}
      label="Remove filter"
      onClick={undefined}
      tooltipPlacement={undefined}
    />
  </div>
</form>
`;

exports[`Filter should render filter input with given placeholder 1`] = `
<form
  className="undefined"
  onSubmit={[Function]}
  role="search"
>
  <div
    className="form-group undefined"
  >
    <Icon
      className={undefined}
      name="talend-search"
    />
    <FilterInput
      autoFocus={true}
      debounceMinLength={undefined}
      debounceTimeout={undefined}
      dockable={true}
      id={undefined}
      onBlur={[Function]}
      onFilter={[Function]}
      onFocus={[Function]}
      onToggle={undefined}
      placeholder="find something"
      value={undefined}
    />
    <Action
      bsStyle="link"
      className={undefined}
      hideLabel={true}
      icon="talend-cross"
      id={undefined}
      label="Remove filter"
      onClick={undefined}
      tooltipPlacement={undefined}
    />
  </div>
</form>
`;

exports[`Filter should render highlighted filter 1`] = `
<Action
  bsStyle="link"
  className=""
  hideLabel={true}
  icon="talend-search"
  id={undefined}
  label="Toggle filter"
  onClick={[Function]}
  tooltipPlacement={undefined}
/>
`;

exports[`Filter should render id if provided 1`] = `
<Action
  bsStyle="link"
  className=""
  hideLabel={true}
  icon="talend-search"
  id="toolbar-filter"
  label="Toggle filter"
  onClick={[Function]}
  tooltipPlacement={undefined}
/>
`;

exports[`Filter should render only toggle icon 1`] = `
<Action
  bsStyle="link"
  className=""
  hideLabel={true}
  icon="talend-search"
  id={undefined}
  label="Toggle filter"
  onClick={[Function]}
  tooltipPlacement={undefined}
/>
`;
